Fix selected tab color on iOS

--- a/src/app/pages/tabs/tabs.component.scss
+++ b/src/app/pages/tabs/tabs.component.scss
@@ -3,4 +3,5 @@
 ion-tabs {
   --ion-tabbar-text-color: #{transparentize($second-color, 0.6)};
   --ion-tabbar-text-color-active: #{$second-color};
+  --ion-color-primary: #{$second-color};
 }
